--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "jimp": "^0.22.10",
     "mongoose": "^7.1.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "twilio": "^4.19.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
